# whisper_afrorad_training

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  whisper-fine-tuning-rad-final.ipynb  whisper-finetuning-tests-results-analysis-env-cola.ipynb
configs/: eval.yaml  pipeline.yaml  train.yaml
configs/data/: afroradvoice_fr.yaml
configs/model/: whisper_base.yaml  whisper_medium.yaml  whisper_small.yaml
configs/runtime/: cpu_fallback.yaml  linux_gpu.yaml  windows_gpu.yaml
manifests/: test_manifest.example.json
scripts/: pipeline.ps1
src/afrorad_pipeline/: __init__.py  collator.py  data_pipeline.py  doctor.py  eval.py  io_utils.py  layer_policy.py  reporting.py  run_pipeline.py  security.py  train.py  training_utils.py
src/afrorad_whisper_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_layer_policy.py  test_manifest_filter.py  test_reporting.py
